--- a/main.html
+++ b/main.html
@@ -10,7 +10,40 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<form method="GET">
+	<div>
+		<label for="name">Name*</label>
+		<input type="text" name="abc" id="name" required>
+	</div>
+	<div>
+		<label for="email">Email*</label>
+		<input type="email" name="email" id="email" required>
+	</div>
+	<div>
+		<label for="Gender">Gender*</label>
+		<input type="radio" name="gender" id="Gender" required>
+	</div>
+	<div>
+		<label for="laptop">Laptop Brands</label>
+		<input type="radio" name="lapy" id="laptop">
+	</div>
+	<div>
+		<label for="age">Age*</label>
+		<input type="number" name="age" id="age" required>
+	</div>
+	<div>
+		<label for="dob">DOB*</label>
+		<input type="date" name="gender" id="dob" required>
+	</div>
+	<div>
+		<label for="password">Password*</label>
+		<input type="password" name="pass" id="password" required>
+	</div>
+	<input type="submit" value="submit button">
+	<label for="portfolio"></label>
+	<input type="url" name="port" id="portfolio"
+</form>
+	
 </body>
 
 </html>
