--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
 	</div>
 	<div>
 		<label for="dob">DOB*</label>
-		<input type="date" name="gender" id="dob" required>
+		<input type="date" name="dob" id="dob" required>
 	</div>
 	<div>
 		<label for="password">Password*</label>
