--- a/main.html
+++ b/main.html
@@ -20,12 +20,16 @@
 		<input type="email" name="email" id="email" required>
 	</div>
 	<div>
-		<label for="Gender">Gender*</label>
-		<input type="radio" name="gender" id="Gender" required>
+		<label>Gender*</label>
+		<input type="radio" name="gender" value="Male" required>
+        <input type="radio" name="gender" value="Female" required>
 	</div>
 	<div>
 		<label for="laptop">Laptop Brands</label>
-		<input type="radio" name="lapy" id="laptop">
+		<select id= "laptop">
+			<option>Apple</option>
+			<option>Asus</option>
+			<option>HP</option>
 	</div>
 	<div>
 		<label for="age">Age*</label>
@@ -39,9 +43,8 @@
 		<label for="password">Password*</label>
 		<input type="password" name="pass" id="password" required>
 	</div>
+	<input type="url" name="port" id="portfolio">
 	<input type="submit" value="submit button">
-	<label for="portfolio"></label>
-	<input type="url" name="port" id="portfolio"
 </form>
 	
 </body>
