--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 	<div>
 		<label>Gender*</label>
 		<input type="radio" name="gender" value="Male" required>
-        <input type="radio" name="gender" value="Female" required>
+        <input type="radio" name="gender" required>
 	</div>
 	<div>
 		<label for="laptop">Laptop Brands</label>
