--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
 		<label for="password">Password*</label>
 		<input type="password" name="pass" id="password" required>
 	</div>
-	<input type="url" name="port" id="portfolio">
+	<input type="url" id="portfolio">
 	<input type="submit" value="submit">
 </form>
 	
