--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
 		<input type="password" name="pass" id="password" required>
 	</div>
 	<input type="url" id="portfolio">
-	<input type="submit" value="submit">
+	<button type="submit">submit</button>
 </form>
 	
 </body>
