--- a/main.html
+++ b/main.html
@@ -33,15 +33,15 @@
 	</div>
 	<div>
 		<label for="age">Age*</label>
-		<input type="number" name="age" id="age" required>
+		<input type="number" id="age" required>
 	</div>
 	<div>
 		<label for="dob">DOB*</label>
-		<input type="number" name="dob" id="dob" required>
+		<input type="date" id="dob" required>
 	</div>
 	<div>
 		<label for="password">Password*</label>
-		<input type="password" name="pass" id="password" required>
+		<input type="password" id="password" required>
 	</div>
 	<input type="url" id="portfolio">
 	<button type="submit">submit</button>
