--- a/main.html
+++ b/main.html
@@ -30,6 +30,7 @@
 			<option>Apple</option>
 			<option>Asus</option>
 			<option>HP</option>
+	   </select>
 	</div>
 	<div>
 		<label for="age">Age*</label>
