--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 	</div>
 	<div>
 		<label>Gender*</label>
-		<input type="radio" name="gender" value="Male" required>
+		<input type="radio"  value="male" name="gender" required>
         <input type="radio" name="gender" required>
 	</div>
 	<div>
@@ -30,22 +30,21 @@
 			<option>Apple</option>
 			<option>Asus</option>
 			<option>HP</option>
-	   </select>
 	</div>
 	<div>
 		<label for="age">Age*</label>
-		<input type="number" id="age" required>
+		<input type="number" name="age" id="age" required>
 	</div>
 	<div>
 		<label for="dob">DOB*</label>
-		<input type="date" id="dob" required>
+		<input type="number" name="dob" id="dob" required>
 	</div>
 	<div>
 		<label for="password">Password*</label>
-		<input type="password" id="password" required>
+		<input type="password" name="pass" id="password" required>
 	</div>
 	<input type="url" id="portfolio">
-	<button type="submit">submit</button>
+	<input type="submit" value="submit">
 </form>
 	
 </body>
