--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<form method="post">
+<form method="GET">
 	<div>
 		<label for="name">Name*</label>
 		<input type="text" name="abc" id="name" required>
@@ -30,6 +30,7 @@
 			<option>Apple</option>
 			<option>Asus</option>
 			<option>HP</option>
+		</select>
 	</div>
 	<div>
 		<label for="age">Age*</label>
