--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<form method="GET">
+<form method="post">
 	<div>
 		<label for="name">Name*</label>
 		<input type="text" name="abc" id="name" required>
