--- a/main.html
+++ b/main.html
@@ -44,6 +44,7 @@
 		<label for="password">Password*</label>
 		<input type="password" id="password" required>
 	</div>
+	<label for="portfolio">Portfolio</label>
 	<input type="url" id="portfolio">
 	<button type="submit">submit</button>
 </form>
